arr/youtarr/youtarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: youtarr
  namespace: arr
  labels:
        app.kubernetes.io/name: youtarr
        app.kubernetes.io/part-of: arr
        app.kubernetes.io/managed-by: kubectl
spec:
  replicas: 1
  selector:
    matchLabels:
        app.kubernetes.io/name: youtarr
        app.kubernetes.io/part-of: arr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: youtarr
        app.kubernetes.io/part-of: arr
        app.kubernetes.io/managed-by: kubectl
    spec:
      containers:
        - name: youtarr
          image: dialmaster/youtarr:v1.54.1
          ports:
            - containerPort: 3011
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/src/app/data/
            - name: downloads
              mountPath: /downloads
          
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 200m
              memory: 256Mi
      
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: youtarr
        - name: downloads
          nfs:
            path: /mnt/Datapool2/Media/Completed/YouTube
            server: 192.168.86.109
